"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-07-26	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-39-chpsim-06-13:
	  Makefile.am: install-exec-hook re-installs binaries after libraries
		to suppress really silly post-install link warnings and errors.
		This patch can forward-port to trunk by itself, and really
		seems like something to go upstream to GNU automake.
	  Now generate "install_paths.h" from Makefile, for future 
		path-dependent execution and default library searching.


	* HACKT-00-01-04-main-00-81-39-chpsim-06-12:
	  Object/expr/const_param_expr_list.h: operator[] replaced
		with run-time bounds check for catching run-time errors
		with passing wrong number of arguments to loaded functions.
	  Object/expr/dlfunction.h: added run-time type checks on arguments, 
		and also NULL checks on value extractors (now de-inlined).  
		sim/chpsim/chpsim_dlfunction.h adjusted accordingly.
	  Added small batch of expect-fail test cases involving errors
		in dynamically loaded functions.  
		FIXME: bad handling of type-mismatch in passing
			channel field, as a result of unexpected return type.
		NOTE: passing excessive arguments, just results in dropping
			unused arguments, doesn't report as error.  
	  TODO: more fail tests...


2007-07-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-39-chpsim-06-11:
	  Minor nonmeta-function-call and assignment bug fixes (non-regress).
		Added symbol diagnostic to nonmeta_function's resolve().
	  Object/ref/simple_nonmeta_value_reference.tcc:nonmeta_assign():
		evaluate expression first as a const_param, and then
		dynamic cast -- allows for late type binding and checking 
		through external functions.
	  chpsim/EventExecutor:visit(function_call): 
		forgot to recheck successors.
	  Next: more test cases, more, more, more...