@@ -1,0 +1,9 @@
+# "gcd-func-a-12.chpsimrc"
+#	$Id: gcd-func-a-12.chpsimrc,v 1.1.2.1 2007/07/26 21:37:26 fang Exp $
+# Yes, use THIS object file
+# @haco@ missing_func-a.haco-a
+# @module@ -lgcd
+# @deps@ gcd.la
+
+dlassertfunc my_gcd
+
