@@ -1,0 +1,2 @@
+loaded function: `my_gcd'.
+function `my_gcd': bound.
