@@ -1,0 +1,14 @@
+# "gcd-func-a-13.chpsimrc"
+#	$Id: gcd-func-a-13.chpsimrc,v 1.1.2.1 2007/07/26 21:37:27 fang Exp $
+# Yes, use THIS object file
+# @haco@ missing_func-a.haco-a
+# @module@ -L/nowhere/lib
+
+dlpaths
+dladdpath /down/south/lib
+dlpaths
+
+# opening module in script instead of on command-line
+dlopen gcd
+# @deps@ gcd.la
+
